--- a/index.html
+++ b/index.html
@@ -11,11 +11,17 @@
     <title>心铭舍-知名品牌设计公司以及品牌策划品牌顾问公司</title>
     <!-- 引入icon图标 -->
     <link rel="icon" href="favicon-114x114.jpg" sizes="32x32">
+    <!-- 引入字体图标 -->
     <link rel="stylesheet" href="./font/iconfont.css">
     <!-- 引入初始化样式 -->
     <link rel="stylesheet" href="./css/base.css">
+    <!-- 引入公共样式 -->
+    <link rel="stylesheet" href="./css/yw.css">
+    <link rel="stylesheet" href="./lib/bootstrap.css">
+
     <!-- 引入首页样式 -->
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/index_top.css">
+    <link rel="stylesheet" href="./css/index_bottom.css">
 </head>
 
 <body>
@@ -539,8 +545,271 @@
             </li>
         </ul>
     </div>
+
+    <!-- 小黑条 -->
+    <div class="blackTitle">
+        <!-- 版心 -->
+        <div class="wrapper clearfix">
+            <!-- 小黑块儿 -->
+            <div class="Design1 fl">
+                <h3>515</h3>
+                <p>设计项目提案</p>
+            </div>
+            <div class="Design2 fl">
+                <h3>1618</h3>
+                <p>咖啡陪伴过夜</p>
+            </div>
+            <div class="Design3 fl">
+                <h3>245</h3>
+                <p>满意的客户</p>
+            </div>
+            <div class="Design4 fl">
+                <h3>280</h3>
+                <p>设计项目量</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- 展示模块 -->
+    <div class="banner-show">
+        <!-- 背景图小白 -->
+        <div class="small-bg"></div>
+        <!-- iPhone展示模块 -->
+        <div class="xinMing-show">
+            <div class="wrapper clearfix">
+                <!-- 中间图片 -->
+                <div class="products-iPhone">
+                    <img src="./images/20170801085330321.png">
+                </div>
+                <!-- 左边列表 -->
+                <div class="show-l fl">
+                    <div class="show-l-1 items">
+                        <div class="h3box clearfix">
+                            <h3 class="fr">
+                                心铭舍 | 多元性<br>
+                                <span class="under-line"></span>
+                            </h3>
+                        </div>
+                        <p>心铭舍由多元文化背景的成员组成，文化相互<br />融合后产生文化协同让我们兼容并蓄，打破固<br />有观念。</p>
+                    </div>
+                    <div class="show-l-2 items">
+                        <div class="h3box clearfix">
+                            <h3 class="fr">
+                                心铭舍 | 创新力<br>
+                                <span class="under-line"></span>
+                            </h3>
+                        </div>
+                        <p>我们使用框架式设计思维来创建和调整品牌模<br />型，以便在每个接触点上的品牌理念得到清晰<br />准确的表达。</p>
+                    </div>
+                    <div class="show-l-3 items">
+                        <div class="h3box clearfix">
+                            <h3 class="fr">
+                                心铭舍 | 价值认同<br>
+                                <span class="under-line"></span>
+                            </h3>
+                        </div>
+                        <p>服务的本真是找到价值认同，对于价值观与商<br />业理念无法融合的客户我们不接受委托。</p>
+                    </div>
+                </div>
+                <!-- 右边列表 -->
+                <div class="show-r fr">
+                    <div class="show-r-1 items">
+                        <div class="h3box clearfix">
+                            <h3 class="fl">
+                                心铭舍 | 多元性<br>
+                                <span class="under-line"></span>
+                            </h3>
+                        </div>
+                        <p>心铭舍由多元文化背景的成员组成，文化相互<br />融合后产生文化协同让我们兼容并蓄，打破固<br />有观念。</p>
+                    </div>
+                    <div class="show-r-2 items">
+                        <div class="h3box clearfix">
+                            <h3 class="fl">
+                                心铭舍 | 创新力<br>
+                                <span class="under-line"></span>
+                            </h3>
+                        </div>
+                        <p>我们使用框架式设计思维来创建和调整品牌模<br />型，以便在每个接触点上的品牌理念得到清晰<br />准确的表达。</p>
+                    </div>
+                    <div class="show-r-3 items">
+                        <div class="h3box clearfix">
+                            <h3 class="fl">
+                                心铭舍 | 价值认同<br>
+                                <span class="under-line"></span>
+                            </h3>
+                        </div>
+                        <p>服务的本真是找到价值认同，对于价值观与商<br />业理念无法融合的客户我们不接受委托。</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 轮播图 -->
+    <div class="router-Chart">
+        <div class="view">
+            <ul class="list">
+                <li>
+                    <p class="top">
+                        简单的重复+长期保持统一的诉求=塑造品牌形象的基本款。
+                        <i class="iconfont icon-bubble"></i>
+                    </p>
+                    <p class="bottom">Richard /<span> Director</span></p>
+                </li>
+                <li>
+                    <p class="top">
+                        别迷信大师、专家，所谓的大师和专家只是指出了一个正确的方向，其实这只是刚刚开始，极致的设计背后都是极大的投入，都是千锤百炼改出来的。牛逼的背后都是苦逼!
+                        <i class="iconfont icon-bubble"></i>
+                    </p>
+                    <p class="bottom">Jem /<span> Operations Director</span></p>
+                </li>
+                <li>
+                    <p class="top">
+                        便宜的设计，只有在你杀完价的那一刻是开心的!用的时候没有一次是开心的；品质的设计，给钱那一刻是纠结的!用的时候每天都是愉快的!
+                        <i class="iconfont icon-bubble"></i>
+                    </p>
+                    <p class="bottom">Christy /<span> Customer Director</span></p>
+                </li>
+                <li>
+                    <p class="top">
+                        关于创新，有人一厢情愿，有人畏手畏脚，要么过度创新，要么不敢创新。能够解决或更好解决消费者主要冲突，并不会引起消费者更大冲突的产品创新，才是真正有效的产品创新，否则创新都是徒劳的。
+                        <i class="iconfont icon-bubble"></i>
+                    </p>
+                    <p class="bottom">Koren /<span> Consultant</span></p>
+                </li>
+                <li>
+                    <p class="top">
+                        品牌的中年危机是品牌发展路程中的必然，而年轻感的品牌总是更具活力的，年轻不是单纯的消费群体问题，而是一种认知感受。品牌保持年轻的秘诀就是对产品体验的打磨，市场传播中对消费者感受的揣摩。
+                        <i class="iconfont icon-bubble"></i>
+                    </p>
+                    <p class="bottom">Koren /<span> Consultant</span></p>
+                </li>
+                <li>
+                    <p class="top">
+                        成本在设计阶段即开始产生，没有后续投入来支撑品牌落地，设计得再美也没用。设计只是一盏灯，品牌建设则需要持续供电。
+                        <i class="iconfont icon-bubble"></i>
+                    </p>
+                    <p class="bottom">Jem /<span> Operations Director</span></p>
+                </li>
+                <li>
+                    <p class="top">
+                        用户热衷瞬时称心，品牌意识或对山寨产品的厌恶感与日俱增，企业需要选一种姿态，让自己活得无可替代。
+                        <i class="iconfont icon-bubble"></i>
+                    </p>
+                    <p class="bottom">Jem /<span> Operations Director</span></p>
+                </li>
+                <li>
+                    <p class="top">
+                        简单的重复+长期保持统一的诉求=塑造品牌形象的基本款。
+                        <i class="iconfont icon-bubble"></i>
+                    </p>
+                    <p class="bottom">Richard /<span> Director</span></p>
+                </li>
+            </ul>
+        </div>
+        <ul class="dot">
+            <li class="active"><span></span></li>
+            <li><span></span></li>
+            <li><span></span></li>
+            <li><span></span></li>
+            <li><span></span></li>
+            <li><span></span></li>
+            <li><span></span></li>
+        </ul>
+    </div>
+
+    <!-- 小绿条 -->
+    <div class="greenTitle">
+        <div class="element wrapper">
+            <span>We design and develop services for customers of all sizes, specializing in creating</span>
+        </div>
+    </div>
+
+    <!-- 公共底部 -->
+    <ul class="bottom-box list-inline  text-center">
+        <li class="box-one text-left">
+            <img src="./images/1.big.png" alt="">
+            <p class="p1"> Copyright ® 2013 - 2019</p>
+            <p class="p2">新加坡公司：Xinming Design Alliance Pte.Ltd</p>
+            <p class="p3">中国公司：深圳心铭舍设计顾问有限公司</p>
+            <p class="p4">版权所有</p>
+            <div class="d1"></div>
+        </li>
+        <li class="box-two text-left">
+            <h2>Company News</h2>
+            <ul class=" list-unstyled">
+                <li><a href="#">心铭舍观点：设计团队如何打造企业文化</a></li>
+                <li><a href="#">心铭舍观点：设计师成长的底层逻辑</a></li>
+                <li><a href="#">心铭舍招聘</a></li>
+                <li><a href="#">心铭舍观点：设计师如何克服拖延症</a></li>
+                <li><a href="#">心铭舍观点：设计师如何跳槽更有意义</a></li>
+                <li><a href="#">心铭舍观点：设计师如何提升说服力</a></li>
+            </ul>
+        </li>
+        <li class="box-three text-left">
+            <h2> Contact us</h2>
+            <p>公司名称：深圳心铭舍设计顾问有限公司</p>
+            <p>公司地址：深圳市南山区海德三道166号 航天科技广场B座7楼 (地铁后海站J出口) </p>
+            <p> 中国深圳：0755-86264979</p>
+            <p>新 加 坡：0065-81868215</p>
+            <p>24-Hour：( 86 ) 18588403046</p>
+            <p>邮　　箱：xinmingshe@gmail.com</p>
+            <p> Q　　 Q：21796958</p>
+        </li>
+        <li class="box-four clearfix text-left">
+            <h2> About Xinming Design</h2>
+            <p>心铭舍提供全方位的品牌建设与品牌整合解决方案</p>
+            <p> Full service agency offering total branding</p>
+            <p> and design solutions,specializing in Asia </p>
+            <p> brand development.</p>
+            <img class="img1" src="./images/2.big.jpg" alt="" class="t1">
+            <img class="img2" src="./images/3big.jpg" alt="" class="t2">
+
+            <p class="pa">心铭舍公众号</p>
+            <p class="pb">咨询品牌总监</p>
+
+        </li>
+
+    </ul>
+    <div class="box-five  text-center">
+        <p>粤ICP备14053154号-1 © 2010-2015 XinMing All Rights Reserved</p>
+    </div>
+
+    <!-- 最底部 -->
+    <div class="lastFooter">
+        <!-- 友情链接 -->
+        <div class="friendly-link">
+            <a href="#">友情链接：</a>
+            <a href="#">深圳品牌VI</a>
+            <a href="#">标志设计</a>
+            <a href="#">叶根友字体</a>
+            <a href="#">vi设计公司</a>
+            <a href="#">中国设计网</a>
+            <a href="#">深圳vi设计</a>
+            <a href="#">企业VI设计</a>
+            <a href="#">设计公司</a>
+            <a href="#">设计公司排名</a>
+            <a href="#">平面设计软件</a>
+            <a href="#">觅元素致设计网</a>
+            <a href="#">菜鸟C4D</a>
+            <a href="#">动漫绘图</a>
+            <a href="#">学UI网</a>
+            <a href="#">3D模型</a>
+            <a href="#">AE素材</a>
+        </div>
+    </div>
+
+    <!-- 回到顶部 -->
+    <div class="toTop">
+        <div class="toTop-1"><span>Top</span></div>
+        <div class="toTop-2"><span>▲</span></div>
+    </div>
+
     <script src="./lib/jquery-1.12.4.js"></script>
     <script src="./js/index.js"></script>
+    <script src="./js/Timer.js"></script>
+    <script src="./js/toTop.js"></script>
+    <script src="./js/Router Chart.js"></script>
 </body>
 
 </html>
